syntax = "proto3";

package employee;

option go_package = "employee-service/api/proto;proto";

// EmployeeService предоставляет методы для работы с сотрудниками и университетами
service EmployeeService {
  // GetAllEmployees получает всех сотрудников с пагинацией
  rpc GetAllEmployees(GetAllEmployeesRequest) returns (GetAllEmployeesResponse);
  
  // SearchEmployees ищет сотрудников по параметрам
  rpc SearchEmployees(SearchEmployeesRequest) returns (SearchEmployeesResponse);
  
  // GetEmployeeByID получает сотрудника по ID
  rpc GetEmployeeByID(GetEmployeeByIDRequest) returns (GetEmployeeByIDResponse);
  
  // CreateEmployee создает нового сотрудника
  rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse);
  
  // CreateEmployeeSimple создает сотрудника с минимальными данными
  rpc CreateEmployeeSimple(CreateEmployeeSimpleRequest) returns (CreateEmployeeSimpleResponse);
  
  // CreateEmployeeByPhone создает сотрудника только по телефону
  rpc CreateEmployeeByPhone(CreateEmployeeByPhoneRequest) returns (CreateEmployeeByPhoneResponse);
  
  // UpdateEmployee обновляет данные сотрудника
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (UpdateEmployeeResponse);
  
  // DeleteEmployee удаляет сотрудника
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (DeleteEmployeeResponse);
  
  // BatchUpdateMaxID обновляет MAX ID для группы сотрудников
  rpc BatchUpdateMaxID(BatchUpdateMaxIDRequest) returns (BatchUpdateMaxIDResponse);
  
  // GetBatchStatus получает статус всех batch операций
  rpc GetBatchStatus(GetBatchStatusRequest) returns (GetBatchStatusResponse);
  
  // GetBatchStatusByID получает статус конкретной batch операции
  rpc GetBatchStatusByID(GetBatchStatusByIDRequest) returns (GetBatchStatusByIDResponse);
  
  // GetUniversityByID получает вуз по ID
  rpc GetUniversityByID(GetUniversityByIDRequest) returns (GetUniversityByIDResponse);
  
  // GetUniversityByINN получает вуз по ИНН
  rpc GetUniversityByINN(GetUniversityByINNRequest) returns (GetUniversityByINNResponse);
  
  // GetUniversityByINNAndKPP получает вуз по ИНН и КПП
  rpc GetUniversityByINNAndKPP(GetUniversityByINNAndKPPRequest) returns (GetUniversityByINNAndKPPResponse);
  
  // Health проверяет состояние сервиса
  rpc Health(HealthRequest) returns (HealthResponse);
}

// Employee list messages
message GetAllEmployeesRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message GetAllEmployeesResponse {
  repeated Employee employees = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  string error = 5;
}

message SearchEmployeesRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
  string sort_by = 4;
  string sort_order = 5;
}

message SearchEmployeesResponse {
  repeated Employee employees = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  string error = 5;
}

message GetEmployeeByIDRequest {
  int64 id = 1;
}

message GetEmployeeByIDResponse {
  Employee employee = 1;
  string error = 2;
}

// Employee creation messages
message CreateEmployeeRequest {
  string first_name = 1;
  string last_name = 2;
  string middle_name = 3;
  string phone = 4;
  string inn = 5;
  string kpp = 6;
  string university_name = 7;
  string role = 8;
}

message CreateEmployeeResponse {
  Employee employee = 1;
  string error = 2;
}

message CreateEmployeeSimpleRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
}

message CreateEmployeeSimpleResponse {
  Employee employee = 1;
  string error = 2;
}

message CreateEmployeeByPhoneRequest {
  string phone = 1;
}

message CreateEmployeeByPhoneResponse {
  Employee employee = 1;
  string error = 2;
}

// Employee update messages
message UpdateEmployeeRequest {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string phone = 5;
  string role = 6;
}

message UpdateEmployeeResponse {
  Employee employee = 1;
  string error = 2;
}

message DeleteEmployeeRequest {
  int64 id = 1;
}

message DeleteEmployeeResponse {
  bool success = 1;
  string error = 2;
}

message Employee {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string phone = 5;
  string role = 6;
  int64 university_id = 7;
  string max_id = 8;
  string created_at = 9;
  string updated_at = 10;
}

// Batch operations messages
message BatchUpdateMaxIDRequest {
  repeated BatchUpdateItem items = 1;
}

message BatchUpdateMaxIDResponse {
  string job_id = 1;
  string error = 2;
}

message BatchUpdateItem {
  string employee_id = 1;
  string max_id = 2;
}

message GetBatchStatusRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetBatchStatusResponse {
  repeated BatchJob jobs = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  string error = 5;
}

message GetBatchStatusByIDRequest {
  string job_id = 1;
}

message GetBatchStatusByIDResponse {
  BatchJob job = 1;
  string error = 2;
}

message BatchJob {
  string id = 1;
  string status = 2;
  int32 total_items = 3;
  int32 processed_items = 4;
  int32 failed_items = 5;
  string created_at = 6;
  string updated_at = 7;
  string error_message = 8;
}

// University messages
message GetUniversityByIDRequest {
  int64 id = 1;
}

message GetUniversityByIDResponse {
  University university = 1;
  string error = 2;
}

message GetUniversityByINNRequest {
  string inn = 1;
}

message GetUniversityByINNResponse {
  University university = 1;
  string error = 2;
}

message GetUniversityByINNAndKPPRequest {
  string inn = 1;
  string kpp = 2;
}

message GetUniversityByINNAndKPPResponse {
  University university = 1;
  string error = 2;
}

message University {
  int64 id = 1;
  string name = 2;
  string inn = 3;
  string kpp = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Health messages
message HealthRequest {
}

message HealthResponse {
  string status = 1;
}